export const snapshot = {};

snapshot[`Initiative View Command - Help Text 1`] = `
stdout:
"
Usage: view <initiativeId>

Description:

  View initiative details

Options:

  -h, --help            - Show this help.                                  
  --no-color            - Disable colored output                           
  --human               - Output in human-readable format (default: JSON)  
  --format    <format>  - Output format: text|json                         

"
stderr:
""
`;

snapshot[`Initiative View Command - Full Details 1`] = `
stdout:
'{
  "initiative": {
    "id": "init-123",
    "name": "Q1 2025 Platform Goals",
    "slugId": "q1-2025-platform-goals",
    "url": "https://linear.app/test/initiative/q1-2025-platform-goals",
    "description": "Focus on platform stability and performance improvements",
    "status": {
      "id": "status-active",
      "name": "Active",
      "type": "started"
    },
    "owner": {
      "name": "Alice Smith"
    },
    "targetDate": "2025-03-31",
    "createdAt": "2024-01-01T10:00:00Z",
    "updatedAt": "2024-01-15T14:30:00Z",
    "projects": [
      {
        "id": "project-1",
        "name": "API Redesign",
        "slugId": "api-redesign"
      },
      {
        "id": "project-2",
        "name": "Database Migration",
        "slugId": "database-migration"
      }
    ]
  }
}
'
stderr:
""
`;

snapshot[`Initiative View Command - JSON Output 1`] = `
stdout:
'{
  "initiative": {
    "id": "init-456",
    "name": "API Modernization",
    "slugId": "api-modernization",
    "url": "https://linear.app/test/initiative/api-modernization",
    "description": "Modernize our API infrastructure",
    "status": {
      "id": "status-planned",
      "name": "Planned",
      "type": "planned"
    },
    "owner": {
      "name": "Bob Jones"
    },
    "targetDate": "2025-06-30",
    "createdAt": "2024-01-05T09:00:00Z",
    "updatedAt": "2024-01-10T11:20:00Z",
    "projects": []
  }
}
'
stderr:
""
`;

snapshot[`Initiative View Command - Minimal Fields 1`] = `
stdout:
'{
  "initiative": {
    "id": "init-minimal",
    "name": "Simple Initiative",
    "slugId": "simple-initiative",
    "url": "https://linear.app/test/initiative/simple-initiative",
    "description": null,
    "status": null,
    "owner": null,
    "targetDate": null,
    "createdAt": "2024-01-10T15:00:00Z",
    "updatedAt": "2024-01-10T15:00:00Z",
    "projects": []
  }
}
'
stderr:
""
`;

snapshot[`Initiative View Command - With Multiple Projects 1`] = `
stdout:
'{
  "initiative": {
    "id": "init-many-projects",
    "name": "Platform Modernization",
    "slugId": "platform-modernization",
    "url": "https://linear.app/test/initiative/platform-modernization",
    "description": "Comprehensive platform upgrade",
    "status": {
      "id": "status-active",
      "name": "Active",
      "type": "started"
    },
    "owner": {
      "name": "Alice Smith"
    },
    "targetDate": "2025-12-31",
    "createdAt": "2024-01-01T10:00:00Z",
    "updatedAt": "2024-01-15T14:30:00Z",
    "projects": [
      {
        "id": "project-1",
        "name": "API Redesign",
        "slugId": "api-redesign"
      },
      {
        "id": "project-2",
        "name": "Database Migration",
        "slugId": "database-migration"
      },
      {
        "id": "project-3",
        "name": "Frontend Upgrade",
        "slugId": "frontend-upgrade"
      },
      {
        "id": "project-4",
        "name": "Security Audit",
        "slugId": "security-audit"
      }
    ]
  }
}
'
stderr:
""
`;

snapshot[`Initiative View Command - By Slug ID 1`] = `
stdout:
'{
  "initiative": {
    "id": "init-789",
    "name": "Q1 2025 Goals",
    "slugId": "q1-2025-goals",
    "url": "https://linear.app/test/initiative/q1-2025-goals",
    "description": "Quarterly goals for Q1",
    "status": {
      "id": "status-active",
      "name": "Active",
      "type": "started"
    },
    "owner": {
      "name": "Alice Smith"
    },
    "targetDate": "2025-03-31",
    "createdAt": "2024-01-01T10:00:00Z",
    "updatedAt": "2024-01-15T14:30:00Z",
    "projects": []
  }
}
'
stderr:
""
`;
